fix(css): alignement icons/game

--- a/docs/static/css/list.css
+++ b/docs/static/css/list.css
@@ -386,11 +386,10 @@ section {
 
 .table .row .icons {
     display: flex;
-    column-gap: 4px;
+    gap: 3px;
+    padding: 2px;
+    min-height: 28px;
     font-size: var(--font-size-medium);
-    line-height: initial;
-    justify-self: center;
-    padding: 3px;
 }
 
 .table .jeu {
